samples/_failures_safe/1761688276_e718ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e2bdbbb.c:182: error: expected ‘;’, ‘,’ or ‘)’ at end of input
